[package]
name = "bytewarden"
version = "0.1.0"
edition = "2024"
description = "TUI for Bitwarden CLI"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
figlet-rs = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
